--- a/books.html
+++ b/books.html
@@ -24,7 +24,7 @@ layout: collections
 		</div>
 
 		<div class="d-none d-md-block px-4">
-			<img src="/assets/images/books/{{ book.image }}" alt="" style="min-width: 150px;">
+			<img src="/assets/images/books/{{ book.image }}" alt="" style="max-width: 150px;">
 		</div>
 	</div>
 {% endfor %}
