--- a/books.html
+++ b/books.html
@@ -15,9 +15,9 @@ layout: collections
 				<span>{{ book.author }}</span>
 			</div>
 			<div class="d-block">
-				<span class="font-weight-bold">Ratting</span>
+				<span class="font-weight-bold">Rating</span>
 				<span> : </span>
-				<span>{{ book.ratting }}</span>
+				<span>{{ book.rating}}</span>
 			</div>
 
 			<span class="d-block my-4">{{ book.content }}</span>
