--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@ layout: resume
 
 <div>
 	<div>
-		<span class="mr-2"><i class="fab fa-linkedin"></i></span>
+		<span class="mr-2"><i class="fab fa-linkedin-in"></i></span>
 		<span>
 			<a href="https://www.linkedin.com/in/philiplambok/">Philip Lambok</a>
 		</span>
@@ -33,6 +33,10 @@ layout: resume
 			<a href="mailto:@philiplambok@gmail.com">philiplambok@gmail.com</a>
 		</span>
 	</div>
+	<div>
+		<span class="mr-2"><i class="fas fa-map-marker-alt"></i></span>
+		<span>Jakarta, Indonesia</span>
+	</div>
 </div>
 <!-- end of header -->
 
@@ -40,7 +44,7 @@ layout: resume
 
 <!-- Summary -->
 <p>
-	I am a Software Engineer. My main skill is web development, especially in backend service. Experienced in write testable, clean and scalable code and testing-driven development or behavior-driven development methodology.
+	I am a Software Engineer. My main skill is web development, especially in backend service. Experienced in write testable, clean, scalable code and testing-driven development or behavior-driven development methodology.
 </p>
 
 <!-- Educations -->
@@ -131,7 +135,7 @@ layout: resume
 
 	<p>
 		<div class="d-flex justify-content-between">
-			<b>Indonesian Forums</b>
+			<b>Indonesian Forum</b>
 			<span class="text-secondary">Aug 2017</span>
 		</div>
 		<span>Building Forum Project Related in Indonesian Culture as Freelance Job.</span><br>
@@ -144,12 +148,25 @@ layout: resume
 	<p>
 		<div class="d-flex justify-content-between">
 			<b>Clothes E-Commerce</b>
-			<span class="text-secondary">May 2017</span>
+			<span class="text-secondary">Aug 2017</span>
 		</div>
 		<span>Building E-Commerce System For Selling Clothes as Freelencer Job.</span><br>
 		<ul>
 			<li>Technology Stack: PHP, Laravel, MySQL, Sass, Bootstrap.</li>
 			<li>Features: CRUD Clothes, Transaction Sytem, Report System, Auth System, Etc. </li>
+		</ul>
+	</p>
+
+	<p>
+		<div class="d-flex justify-content-between">
+			<b>Hifumi.js</b>
+			<span class="text-secondary">Jul 2017</span>
+		</div>
+		<span>A Simple Open Source Javascript Library that inspired in JQuery.</span><br>
+		<ul>
+			<li>Repository: <a href="https://github.com/philiplambok/hifumi.js">https://github.com/philiplambok/hifumi.js</a></li>
+			<li>Technology Stack: HTML and Pure Javascript.</li>
+			<li>Features: Selecting DOM (Document Object Model), Modify Text in DOM, Modify CSS in DOM, Etc.</li>
 		</ul>
 	</p>
 	
@@ -175,19 +192,6 @@ layout: resume
 			<li>Repository: <a href="https://github.com/philiplambok/mikasa">https://github.com/philiplambok/mikasa</a></li>
 			<li>Technology Stack: Pure PHP.</li>
 			<li>Features: Modern Architecture using Composer Package Management, MVC Pattern, Etc.</li>
-		</ul>
-	</p>
-
-	<p>
-		<div class="d-flex justify-content-between">
-			<b>Hifumi.js</b>
-			<span class="text-secondary">Oct 2017</span>
-		</div>
-		<span>A Simple Open Source Javascript Library that inspired in JQuery.</span><br>
-		<ul>
-			<li>Repository: <a href="https://github.com/philiplambok/hifumi.js">https://github.com/philiplambok/hifumi.js</a></li>
-			<li>Technology Stack: HTML and Pure Javascript.</li>
-			<li>Features: Selecting DOM (Document Object Model), Modify Text in DOM, Modify CSS in DOM, Etc.</li>
 		</ul>
 	</p>
 </div>
