--- a/resume.html
+++ b/resume.html
@@ -76,7 +76,7 @@ layout: resume
 	</p>
 	<p>
 		<b>Industry Knowledge</b><br>
-		<span>Web Development / Service (API), Testing-driven Developement, Behavior-driven Development, Software Engineering.</span>
+		<span>Web Development / Service (API), Testing-driven Development, Behavior-driven Development, Software Engineering.</span>
 	</p>
 </div>
 
