--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@ layout: resume
 		<span>Rails, RSpec, Vue.js and Bootstrap.</span>
 	</p>
 	<p>
-		<b>Tools/Technology</b><br>
+		<b>Technology / Tools</b><br>
 		<span>HTML, CSS, Sass, Git, Heroku and Linux Environment.</span>
 	</p>
 	<p>
@@ -191,7 +191,7 @@ layout: resume
 		<ul>
 			<li>Repository: <a href="https://github.com/philiplambok/mikasa">https://github.com/philiplambok/mikasa</a></li>
 			<li>Technology Stack: Pure PHP.</li>
-			<li>Features: Modern Architecture using Composer Package Management, MVC Pattern, Etc.</li>
+			<li>Features: Modern Architecture Using Composer Package Management, MVC Pattern, Etc.</li>
 		</ul>
 	</p>
 </div>
