--- a/books.html
+++ b/books.html
@@ -2,6 +2,7 @@
 layout: collections
 ---
 
+<h2>Daftar Buku yang Sudah Dibaca</h2>
 {% for book in site.books reversed %}
 	<div class="d-flex justify-content-between align-items-start border-bottom pb-2 pb-md-4 mb-4">
 		<div>
