--- a/works.html
+++ b/works.html
@@ -1,7 +1,7 @@
 ---
 layout: collections
 ---
-<h2>My Open Sources Project</h2>
+<h2>Daftar Project yang Sudah Rilis</h2>
 {% for work in site.works reversed %}
 	<div class="mb-4 border-bottom pb-2">
 		<div class="d-block">
