--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 			<img src="/assets/images/avatar.jpg" class="img-fluid p-1 rounded-circle bg-white">
 		</div>
 
-		<div class="header-text my-4">I Love Programming and Japan Stuff</div>
+		<div class="header-text my-4">Software Engineer and Otaku</div>
 	</div>
 </header>
 
