--- a/resume.html
+++ b/resume.html
@@ -85,6 +85,29 @@ layout: resume
 	<h3>Projects</h3>
 	<p>
 		<div class="d-flex justify-content-between">
+			<b>Ayano Payment</b><br>
+			<span class="text-secondary">July 2018</span>
+		</div>
+		<span>Rails api-only project for learning TDD Metodology</span> 
+		<a href="https://github.com/philiplambok/ayano-payment">https://github.com/philiplambok/ayano-payment</a><br>
+		<ul>
+			<li>
+				<span>Technology Stack: Ruby, Rails, RSpec, SQLite.</span>
+			</li>
+			<li>
+				<span>Implementation Testing Driven Developement, do refactoring and clean codes.</span>
+			</li>
+			<li>
+				<span>Write Automation Test: Model (Unit), Request API</span>
+			</li>
+			<li>
+				<span>Features: Authentication use JWT, Roles, Users, Deposits, Transactions, Loggings</span>
+			</li>
+		</ul>
+	</p>
+
+	<p>
+		<div class="d-flex justify-content-between">
 			<b>Kappuchino Website</b><br>
 			<span class="text-secondary">May 2018</span>
 		</div>
