change testing-driven to test-driven in resume page

--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@ layout: resume
 
 <!-- Summary -->
 <p>
-	I am a Software Engineer. My main skill is web development, especially in backend service. Experienced in write testable, clean, scalable code and testing-driven development or behavior-driven development methodology.
+	I am a Software Engineer. My main skill is web development, especially in backend service. Experienced in write testable, clean, scalable code and test-driven development or behavior-driven development methodology.
 </p>
 
 <!-- Educations -->
@@ -76,7 +76,7 @@ layout: resume
 	</p>
 	<p>
 		<b>Industry Knowledge</b><br>
-		<span>Web Development / Service (API), Testing-driven Development, Behavior-driven Development and Software Engineering.</span>
+		<span>Web Development / Service (API), Test-Driven Development, Behavior-Driven Development and Software Engineering.</span>
 	</p>
 </div>
 
