--- a/resume.html
+++ b/resume.html
@@ -95,7 +95,7 @@ layout: resume
 				<span>Technology Stack: Ruby, Rails, RSpec, SQLite.</span>
 			</li>
 			<li>
-				<span>Implementation Testing Driven Developement, do refactoring and clean codes.</span>
+				<span>Implementation Test-Driven Developement, do refactoring and clean codes.</span>
 			</li>
 			<li>
 				<span>Write Automation Test: Model (Unit), Request API</span>
